# asana-tools

./: .aa.cache.yaml  .aa.yml.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
.kiro/specs/asana-auto-id/: design.md  requirements.md  tasks.md
.kiro/specs/distribution/: design.md  requirements.md  tasks.md
.kiro/steering/: language.md  product.md  specs.md  structure.md  tech.md
aa/: __init__.py  __main__.py  cli.py
aa/commands/: __init__.py  cache_info.py  init.py  list_tasks.py  reset.py  scan.py  test_id.py  update.py  validate.py
aa/core/: __init__.py  asana_client.py  id_manager.py  task_processor.py
aa/models/: __init__.py  cache.py  config.py  task.py
aa/utils/: __init__.py  cache_manager.py  config_loader.py
scripts/: bump_version.py  push_tag.py
tasks/AT-1/: AT-1-analysis.md  AT-1-task.md
tasks/AT-1/artifacts/: format_prototype.py  test_import.py  test_output.py
tasks/AT-3/: AT-3-Findings.md  AT-3-Result.md
tasks/AT-3/artifacts/: AT-3-analysis.md  implementation_plan.md
