[project]
name = "aa-cli"
version = "0.1.0"
description = "Automatic human-readable ID assignment for Asana tasks"
readme = "README.md"
authors = [
    { name = "umaxfun", email = "umaxfun@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["asana", "cli", "task-management", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/umaxfun/asana-tools"
Repository = "https://github.com/umaxfun/asana-tools"
Issues = "https://github.com/umaxfun/asana-tools/issues"

[project.scripts]
aa = "aa.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aa"]
